[package]
name = "arch_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.27"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11.20", features = ["json"] }
env_logger = "0.10.0"
dotenvy = "0.15"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid"] }
anyhow = "1.0.75"
calamine = "0.22.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
axum = "0.6.20"
serde = { version = "1.0.188", features = ["derive"] }
tower-http = { version = "0.4.4", features = ["cors"] }
tower = "0.4.13"
http = "0.2.9"
elapsed-time = "0.1.0"
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
log = "0.4.20"
pyo3 = { version = "0.19.2", features = ["extension-module"] }
lazy_static = "1.4.0"
async_once = "0.2.6"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }